--- a/set1/index.html
+++ b/set1/index.html
@@ -437,7 +437,7 @@
         Some fun facts
         ==================================== -->		
 		
-		<section id="facts" class="facts">
+		<section id="facts" class="facts" style="display:none">
 			<div class="parallax-overlay">
 				<div class="container">
 					<div class="row number-counters">
