--- a/set1/rasdas.html
+++ b/set1/rasdas.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Minlee Profile</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Min has a lot of natural personal qualities that make her a good worker" />
-	<meta name="keywords" content="Mary Ann E. Ignaco,Mary Ann Ignaco, Ignaco, Jing, Minlee, GoTrace" />
-	<meta name="author" content="Mary Ann E. Ignaco, Minlee, Jing" />
+	<meta name="description" content="She is a dedicated, hardworker, and a team player faculty" />
+	<meta name="keywords" content="Sherrlyn M. Rasdas,Sherrlyn M. Rasdas, Rasdas, Lyn, She, SIKTeK" />
+	<meta name="author" content="Sherrlyn M. Rasdas, She, Lyn" />
 	<meta name="thumbnail" content="images/about.jpg" />
 
   <!-- Facebook and Twitter integration -->
@@ -247,8 +247,8 @@ Certificate No. 18042102023238 </p>
 								</span>
 								<div class="desc">
 									<h3>Awards</h3>
-									<p><strong>3rd Place in Spoken Poetry </strong>November 25, 2019<br>
-                                    During the Gender and Development Program- VAWC at CvSU-CCAT Campus </p>
+									<p><strong>Best Extension Paper </strong>September 5, 2018<br>
+                                    During the 13th Extension In-House Review Cavite State University Main </p>
 								</div>
 							</div>
 						</div>
