--- a/set1/index.html
+++ b/set1/index.html
@@ -352,10 +352,10 @@
 					<!-- single member -->
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms">
 						<div class="member-thumb">
-							<img src="img/team/member-1.png" alt="Team Member" class="img-responsive">
+							<img src="img/team/sy.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
-								<h5>voluptatem quia voluptas </h5>
-								<p>sit aspernatur aut odit aut fugit,</p>
+								<h5>Test Data </h5>
+								<p>Sample overlay</p>
 								<ul class="social-links text-center">
 									<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
 									<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -363,8 +363,8 @@
 								</ul>
 							</figcaption>
 						</div>
-						<h4>John Filmr Doe</h4>
-						<span>Managing Director</span>
+						<h4>Mark Philip M. Sy</h4>
+						<span>Developer</span>
 					</figure>
 					<!-- end single member -->
 					
@@ -382,8 +382,8 @@
 								</ul>
 							</figcaption>
 						</div>
-						<h4>Martin Matrone</h4>
-						<span>Lead Developer</span>
+						<h4>Mary Ann E. Ignaco</h4>
+						<span>Developer</span>
 					</figure>
 					<!-- end single member -->
 					
