--- a/set1/index.html
+++ b/set1/index.html
@@ -369,7 +369,7 @@
 					<!-- end single member -->
 					
 					<!-- single member -->
-					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
+					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms"><a href="ignaco.html">
 						<div class="member-thumb">
 							<img src="img/team/member-2.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
@@ -383,7 +383,7 @@
 							</figcaption>
 						</div>
 						<h4>Mary Ann E. Ignaco</h4>
-						<span>Developer</span>
+						<span>Developer</span></a>
 					</figure>
 					<!-- end single member -->
 					
