--- a/set1/index.html
+++ b/set1/index.html
@@ -252,11 +252,11 @@
 			<div class="project-wrapper">
 			
 				<figure class="mix work-item branding">
-					<img src="img/works/item-1.jpg" alt="">
+					<img src="img/works/osas.png" alt="">
 					<figcaption class="overlay">
-						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-1.jpg"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Labore et dolore magnam</h4>
-						<p>Photography</p>
+						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/osas.png"><i class="fa fa-eye fa-lg"></i></a>
+						<h4>Online Student Admission System</h4>
+						<p>Web Development</p>
 					</figcaption>
 				</figure>
 				
