--- a/set1/index.html
+++ b/set1/index.html
@@ -261,11 +261,11 @@
 				</figure>
 				
 				<figure class="mix work-item web">
-					<img src="img/works/item-2.jpg" alt="">
+					<img src="img/works/work2.png" alt="">
 					<figcaption class="overlay">
-						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-2.jpg"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Labore et dolore magnam</h4>
-						<p>Photography</p>
+						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/work2.png"><i class="fa fa-eye fa-lg"></i></a>
+						<h4>Sustainable Products Innovation and Research Hub</h4>
+						<p>Web Development</p>
 					</figcaption>
 				</figure>
 				
