--- a/set1/index.html
+++ b/set1/index.html
@@ -371,7 +371,7 @@
 					<!-- single member -->
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms"><a href="ignaco.html">
 						<div class="member-thumb">
-							<img src="img/team/member-2.png" alt="Team Member" class="img-responsive">
+							<img src="img/team/ignaco.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
 								<h5>voluptatem quia voluptas </h5>
 								<p>sit aspernatur aut odit aut fugit,</p>
@@ -390,7 +390,7 @@
 					<!-- single member -->
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="600ms">
 						<div class="member-thumb">
-							<img src="img/team/member-3.png" alt="Team Member" class="img-responsive">
+							<img src="img/team/catajan.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
 								<h5>voluptatem quia voluptas </h5>
 								<p>sit aspernatur aut odit aut fugit,</p>
@@ -401,8 +401,8 @@
 								</ul>
 							</figcaption>
 						</div>
-						<h4>Test Data</h4>
-						<span>Sr. UI Designer</span>
+						<h4>Angelito L. Catajan</h4>
+						<span>Designer</span>
 					</figure>
 					<!-- end single member -->
 					
