--- a/set1/index.html
+++ b/set1/index.html
@@ -369,6 +369,7 @@
 					<!-- end single member -->
 					
 					<!-- single member -->
+					<a href="https://tip-markphilipsy.github.io/set1/ignaco.html">
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms"><a href="ignaco.html">
 						<div class="member-thumb">
 							<img src="img/team/ignaco.png" alt="Team Member" class="img-responsive">
@@ -385,6 +386,7 @@
 						<h4>Mary Ann E. Ignaco</h4>
 						<span>Developer</span></a>
 					</figure>
+					</a>
 					<!-- end single member -->
 					
 					<!-- single member -->
