--- a/set1/index.html
+++ b/set1/index.html
@@ -441,7 +441,7 @@
 					<!-- single member -->
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
 						<div class="member-thumb">
-							<img src="img/team/member-1.png" alt="Team Member" class="img-responsive">
+							<img src="img/team/rasdas.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
 								<h5>voluptatem quia voluptas </h5>
 								<p>sit aspernatur aut odit aut fugit,</p>
@@ -452,8 +452,8 @@
 								</ul>
 							</figcaption>
 						</div>
-						<h4>Test Data</h4>
-						<span>Developer</span>
+						<h4>Sherrlyn M. Rasdas</h4>
+						<span>Quality Assurance Specialist</span>
 					</figure>
 					<!-- end single member -->
 					
