--- a/set1/rasdas.html
+++ b/set1/rasdas.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="She is a dedicated, hardworker, and a team player faculty" />
 	<meta name="keywords" content="Sherrlyn M. Rasdas,Sherrlyn M. Rasdas, Rasdas, Lyn, She, SIKTeK" />
 	<meta name="author" content="Sherrlyn M. Rasdas, She, Lyn" />
-	<meta name="thumbnail" content="images/about.jpg" />
+	<meta name="thumbnail" content="img/team/rasdas.png" />
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -57,7 +57,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
+				<div class="author-img" style="background-image: url(img/team/rasdas.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Sherrlyn M. Rasdas</a></h1>
 				<span class="position"><a href="#">Quality Assurance Specialist</a> in Philippines</span>
 			</div>
@@ -79,10 +79,10 @@
 
 			<div class="colorlib-footer">
 				<p>
-					<a href="https://www.facebook.com/mignaco" target="_blank"><i class="icon-facebook2"></i></a>
-					<a href="https://twitter.com/jing07ignaco" target="_blank"><i class="icon-twitter2"></i></a>
-					<a href="https://www.instagram.com/minlee_ignaco/?hl=en" target="_blank"><i class="icon-instagram"></i></a>
-					<a href="https://www.linkedin.com/in/mary-ann-ignaco-99b554154/" target="_blank"><i class="icon-linkedin2"></i></a>
+					<a href=" " target="_blank"><i class="icon-facebook2"></i></a>
+					<a href=" " target="_blank"><i class="icon-twitter2"></i></a>
+					<a href=" " target="_blank"><i class="icon-instagram"></i></a>
+					<a href=" " target="_blank"><i class="icon-linkedin2"></i></a>
 				</p>
 			
 			</div>
