--- a/set1/rasdas.html
+++ b/set1/rasdas.html
@@ -169,14 +169,6 @@
 									</div>
 								</div>
 							</div>
-							<div class="row">
-								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-									<div class="hire">
-										<h2>I am happy to know you <br>that 5 projects done sucessfully!</h2>
-										<a href="#" class="btn-hire">Hire me</a>
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -244,7 +236,7 @@ October 21, 2020
 								</span>
 								<div class="desc">
 									<h3>Awards</h3>
-									<p><strong>Best Extension Paper September 5, 2018<br>
+									<p><strong>Best Extension Paper September 5, 2018 </strong><br>
                                     During the 13th Extension In-House Review Cavite State University Main </p>
 								</div>
 							</div>
@@ -281,32 +273,6 @@ October 21, 2020
 				
 			</section>
 			
-			
-			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
-				<div class="overlay"></div>
-				<div class="colorlib-narrow-content">
-					<div class="row">
-					</div>
-					<div class="row">
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Cups of coffee</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="5" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Projects</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Clients</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Partners</span>
-						</div>
-					</div>
-				</div>
-			</div>
 
 			<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
@@ -532,7 +498,7 @@ October 21, 2020
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Extension Unit Head/IT Faculty/Assistant Professor IV	</span></h2>
+					                  <h2>Extension Unit Head/IT Faculty/Assistant Professor IV</h2>
 					                  <strong>Cavite State University Naic</strong><br>
 							    June 2007 to present    
 					                  <ul>
@@ -564,74 +530,6 @@ October 21, 2020
 					      </div>
 					   </div>
 				   </div>
-				</div>
-			</section>
-
-			
-
-			<section class="colorlib-contact" data-section="contact">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Get in Touch</span>
-							<h2 class="colorlib-heading">Contact</h2>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-5">
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-globe-outline"></i>
-								</div>
-								<div class="colorlib-text">
-									<p><a href="#">maeignaco@cvsu.edu.ph</a></p>
-								</div>
-							</div>
-
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-map"></i>
-								</div>
-								<div class="colorlib-text">
-									<p> Office of Research and Extension at Technovation Center, CvSU-CCAT Campus, Tejeros Convention, Rosario Cavite</p>
-								</div>
-							</div>
-
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-phone"></i>
-								</div>
-								<div class="colorlib-text">
-									<p><a href="tel://">+63916-203-6801</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-7 col-md-push-1">
-							<div class="row">
-								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-
-									<form action="" method="POST">
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name" name="fname" onkeypress='return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122) || (event.charCode == 32))'  required>
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Email" name="email"  required>
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Subject" name="subj" required>
-										</div>
-										<div class="form-group">
-											<textarea id="message" cols="30" rows="7" class="form-control" placeholder="Message" name="inquirymsg" required></textarea>
-										</div>
-										<div class="form-group">
-											<input type="submit" name="sendmsg" class="btn btn-primary btn-send-message" value="Send Message">
-										</div>
-									</form>
-								</div>
-								
-							</div>
-						</div>
-					</div>
 				</div>
 			</section>
 
