--- a/set1/index.html
+++ b/set1/index.html
@@ -270,13 +270,12 @@
 				</figure>
 				
 				<figure class="mix work-item web">
-					<a href="https://gotrace.cvsuccatre.com/"><img src="img/works/gotrace.png" alt="">
+					<img src="img/works/gotrace.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/work2.png"><i class="fa fa-eye fa-lg"></i></a>
 						<h4>Sustainable Products Innovation and Research Hub</h4>
 						<p>Web Development</p>
 					</figcaption>
-					</a>
 				</figure>
 				
 				<figure class="mix work-item web">
