--- a/set1/index.html
+++ b/set1/index.html
@@ -263,16 +263,9 @@
 				<figure class="mix work-item web">
 					<img src="img/works/metalsurvey.png" alt="">
 					<figcaption class="overlay">
-						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/work2.png"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Sustainable Products Innovation and Research Hub</h4>
-						<p>Web Development</p>
-					</figcaption>
-				</figure>
-				
-				<figure class="mix work-item web">
-					<img src="img/works/gotrace.png" alt="">
-					<figcaption class="overlay">
-						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/work2.png"><i class="fa fa-eye fa-lg"></i></a>
+						<a class="fancybox" rel="works" title="The main objective of this survey is to collect data relevant to the profiling of the metalworking industry in the
+CALABARZON region. The survey will cover the participant’s profile, business profile, capitalization, products and
+services, business enabling environment, and market profile among others." href="http://metalsurvey.cvsuccatre.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
 						<h4>Sustainable Products Innovation and Research Hub</h4>
 						<p>Web Development</p>
 					</figcaption>
@@ -281,7 +274,19 @@
 				<figure class="mix work-item web">
 					<img src="img/works/reportal.png" alt="">
 					<figcaption class="overlay">
-						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/work2.png"><i class="fa fa-eye fa-lg"></i></a>
+						<a class="fancybox" rel="works" title="It is a web-based application that will offer a research and extension service portal for CCAT employees." href="https://reserviceportal.cvsuccatre.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
+						<h4>Sustainable Products Innovation and Research Hub</h4>
+						<p>Web Development</p>
+					</figcaption>
+				</figure>
+				
+				<figure class="mix work-item web">
+					<img src="img/works/gotrace.png" alt="">
+					<figcaption class="overlay">
+						<a class="fancybox" rel="works" title="GoTrace, a web-based contact tracing application that uses Quick 
+Response (QR) codes. GoTrace integrates the collection of daily health survey 
+and location tracking data of the end-users on a digital and web platform to 
+generate real-time, accurate, and reliable contact tracing reports." href="https://gotrace.cvsuccatre.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
 						<h4>Sustainable Products Innovation and Research Hub</h4>
 						<p>Web Development</p>
 					</figcaption>
@@ -290,7 +295,7 @@
 				<figure class="mix work-item web">
 					<img src="img/works/onevar.png" alt="">
 					<figcaption class="overlay">
-						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/work2.png"><i class="fa fa-eye fa-lg"></i></a>
+						<a class="fancybox" rel="works" title="OneVAR is designed as the perfect avenue for the conduct of virtual accreditation. It will also serve as an excellent platform for data repository." href="https://onevar.cvsu-techno.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
 						<h4>Sustainable Products Innovation and Research Hub</h4>
 						<p>Web Development</p>
 					</figcaption>
