--- a/set1/index.html
+++ b/set1/index.html
@@ -359,8 +359,8 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 						<div class="member-thumb">
 							<img src="img/team/sy.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
-								<h5>Test Data </h5>
-								<p>Sample overlay</p>
+								<h5>Mark Philip M. Sy</h5>
+								<p>Developer</p>
 								<ul class="social-links text-center">
 									<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
 									<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -377,15 +377,18 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms">
 						<div class="member-thumb">
 							<img src="img/team/ignaco.png" alt="Team Member" class="img-responsive">
+							<a href="https://tip-markphilipsy.github.io/set1/ignaco.html">
 							<figcaption class="overlay">
-								<h5>Test Data </h5>
-								<p>Sample overlay</p>
+								
+								<h5>Mary Ann E. Ignaco</h5>
+								<p>Developer</p>
 								<ul class="social-links text-center">
-									<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
-									<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
-									<li><a href=""><i class="fa fa-google-plus fa-lg"></i></a></li>
+									<li><a href="https://twitter.com/jing07ignaco" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
+									<li><a href="https://www.facebook.com/mignaco" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
+									<li><a href="https://scholar.google.com/citations?user=wFVtrCIAAAAJ&hl=en" target="_blank"><i class="fa fa-google-plus fa-lg"></i></a></li>
 								</ul>
 							</figcaption>
+							</a>
 						</div>
 						<h4>Mary Ann E. Ignaco</h4>
 						<span>Developer</span>
@@ -397,8 +400,8 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 						<div class="member-thumb">
 							<img src="img/team/catajan.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
-								<h5>voluptatem quia voluptas </h5>
-								<p>sit aspernatur aut odit aut fugit,</p>
+								<h5>Angelito L. Catajan</h5>
+								<p>Designer</p>
 								<ul class="social-links text-center">
 									<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
 									<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -448,8 +451,8 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 						<div class="member-thumb">
 							<img src="img/team/rasdas.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
-								<h5>voluptatem quia voluptas </h5>
-								<p>sit aspernatur aut odit aut fugit,</p>
+								<h5>Sherrlyn M. Rasda</h5>
+								<p>Quality Assurance Specialist</p>
 								<ul class="social-links text-center">
 									<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
 									<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
