--- a/set1/rasdas.html
+++ b/set1/rasdas.html
@@ -257,7 +257,7 @@ October 21, 2020
 									<i class="icon-star"></i>
 								</span>
 								<div class="desc">
-									<h3>Awards</h3>
+									<h3>Short Courses</h3>
 									<p><strong>Technical Education</strong><br>
 	COVID-19 Contact Tracing at Johns Hopkins University<br>
 	Understanding Research Methods at University of London<br>
@@ -499,7 +499,7 @@ October 21, 2020
 					                  <strong>Cavite State University Naic</strong><br>
 							    June 2007 to present    
 					                  <ul>
-					                  	<li>DEPARTMENT HEAD. CLeads the IT Department in planning and implementation of IT Department goals and objectives. Helps the curriculum and instructions director in monitoring and evaluation of the performance of IT faculty and students (Start: 2013)</li>
+					                  	<li>DEPARTMENT HEAD. Leads the IT Department in planning and implementation of IT Department goals and objectives. Helps the curriculum and instructions director in monitoring and evaluation of the performance of IT faculty and students (Start: 2013)</li>
 					                  	<li>EXTENSION UNIT HEAD. Coordinate all extension activities, monitor and evaluate the extensions, plan and implement activities, and recommend extension projects or activities for possible funding (external or internal). (Start: 2015)</li>
 					                  	<li>INSTRUCTOR. Responsible for implementing course content and curriculum. Builds a learning environment that encourages student involvement and participation.</li>
 					                  	<li>THESIS ADVISER. Provide professional and constructive feedback, and deliver concrete guidance for the improvement of the study.</li>
