--- a/set1/rasdas.html
+++ b/set1/rasdas.html
@@ -339,7 +339,7 @@ October 21, 2020
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Assembly Language</h3>
+								<h3>Data Analytics</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
