--- a/set1/catajan.html
+++ b/set1/catajan.html
@@ -200,15 +200,20 @@
 								</span>
 								<div class="desc">
 									<h3>Publication - referred</h3>
-									<p>Ignaco, M.A.E.: Development of mobile application for Incident Reporting.<br> In: Proceedings of the 
-20th Annual SIG Conference on Information Technology Education, SIGITE 2019, September, p. 
-162 (2019). 	</p>	<a href="https://scholar.google.com/scholar?hl=en&q=Mary+Ann+E+Ignaco.+2019.+Development+of+mobile+application+for+incident+reporting.+In+Proceedings+of+the+20th+Annual+SIG+Conference+on+Information+Technology+Education.+162%2D%2D162.+10.1145%2F3349266.3351382" target="_blank"><img src="images/googleScholar.svg"></a>
+									<p>Validation of E-Learning Software in Introductory Physics</p><br>	
+									INTERNATIONAL JOURNAL OF SCIENCE AND RESEARCH (IJSR) | July 2020
+									<br><a href="https://scholar.google.com/scholar?hl=en&q=Mary+Ann+E+Ignaco.+2019.+Development+of+mobile+application+for+incident+reporting.+In+Proceedings+of+the+20th+Annual+SIG+Conference+on+Information+Technology+Education.+162%2D%2D162.+10.1145%2F3349266.3351382" target="_blank"><img src="images/googleScholar.svg"></a>
+									<a href="https://dl.acm.org/doi/10.1145/3349266.3351382" target="_blank"><img src="images/DL_icon.svg"></a>
+									<p>"PalitTayo": An Online Trading System in the Philippines</p><br>
+									ASIA PACIFIC JOURNAL OF EDUCATION ARTS & SCIENCES | October 2017
+									<br><a href="https://scholar.google.com/scholar?hl=en&q=Mary+Ann+E+Ignaco.+2019.+Development+of+mobile+application+for+incident+reporting.+In+Proceedings+of+the+20th+Annual+SIG+Conference+on+Information+Technology+Education.+162%2D%2D162.+10.1145%2F3349266.3351382" target="_blank"><img src="images/googleScholar.svg"></a>
 									<a href="https://dl.acm.org/doi/10.1145/3349266.3351382" target="_blank"><img src="images/DL_icon.svg"></a>	
+									
 									
 
 								</div>
 							</div>
-						</div>
+						   </div>
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-2">
 								<span class="icon">
@@ -216,10 +221,14 @@
 								</span>
 								<div class="desc">
 									<h3>International Conference</h3>
-									Mobile Application for Incident Reporting 
-<a href="http://icicpe.org/" target="_blank">The 4th International conference on Interdisciplinary research on Computer Science, Psychology, and Education (ICICPE 2020)</a>
-Jeju Island Korea <small>Virtual Presentation 
-December 21-23, 2020</small>
+									May Trabaho Depot: A Web-based Station for Pinoy Freelancers 
+									<a href="http://icicpe.org/" target="_blank">10th International Conference & Conferment Ceremony</a>
+									Marco Polo Plaza, Cebu <small> December 21-23, 2020</small>
+									<br>
+									“Kid’s Mathematica”: An Android Application for Kids Math Education 
+									<a href="http://icicpe.org/" target="_blank">International Conference on Technological Revolution in Education 2017 (ICTREd2017)</a>
+									Boracay Island, Malay, Aklan  <small>February 24, 2017</small>
+
 								</div>
 							</div>
 						</div>
@@ -230,9 +239,10 @@ December 21-23, 2020</small>
 								</span>
 								<div class="desc">
 									<h3>TECHNICAL EDUCATION AND SKILLS DEVELOPMENT ATTAINMENT</h3>
-									<p>National Certificate II <br><br>Computer 
-Systems Servicing <br>
-June 30, 2018 –<br> June 29, 2023 <br>
+									<p>National Certificate II <br><br>Computer Systems Servicing <br>
+									October 19, 2018<br><br>
+									<p>National Certificate III <br><br>Visual Graphic Design<br>
+									July 5, 2019
 								</div>
 							</div>
 						</div>
@@ -430,10 +440,10 @@ June 30, 2018 –<br> June 29, 2023 <br>
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Instructor I</a> <span>June 2015 – Present</span></h2>
-					                  <strong>Cavite State University-CCAT Campus</strong><br>
+					                  <h2><a href="#">Instructor II</a> <span>June 2006 – Present</span></h2>
+					                  <strong>Cavite State University Naic</strong><br>
 					                  <ul>
-					                  	<li>EBA Director. Help the University in income resource generation through rentals of facilities, product sales, consignee, Special training and Special Project Program. One of the Special Project Programs is fabrication and production of school / office furniture under Special Project Programs</li>
+					                  	<li>Director, External and Business Affairs.  Help the University in income resource generation through rentals of facilities, product sales, consignee, Special training and Special Project Program</li>
 					                  	<li>INSTRUCTOR. Responsible for implementing course content and curriculum. Builds a learning environment that encourages student involvement and participation.</li>
 					                  </ul>
 					               </div>
