--- a/set1/tanega.html
+++ b/set1/tanega.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Michelle's Profile</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Min has a lot of natural personal qualities that make her a good worker" />
-	<meta name="keywords" content="Mary Ann E. Ignaco,Mary Ann Ignaco, Ignaco, Jing, Minlee, GoTrace" />
-	<meta name="author" content="Mary Ann E. Ignaco, Minlee, Jing" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<meta name="author" content="" />
 	<meta name="thumbnail" content="images/about.jpg" />
 
   <!-- Facebook and Twitter integration -->
@@ -139,7 +139,7 @@
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p style="text-align: justify;"><strong>Ms. Tanega</strong> is a current Instructor and has been serving the institution for more than ten years now. She was initially hired as a part-time faculty member in 2009 to teach computer programming, web development, and programming languages. To secure her tenure in the institution, in 2017, she applied for the plantilla position of Instructor I.  In 2020, she was designated as a <a href="https://reserviceportal.cvsuccatre.com/index.php#about" target="_blank">Coordinator of Research Services</a>, and the year after she applied as a Faculty Researcher. Her interest in software development leads her contributions to the campus in the distribution of extension services in the community amid pandemics. </p>
-										<p style="text-align: justify;">Being a graduate of MS Information Technology from Technological University of the Philippines- Manila, her research interests are focused on software development for the community service project. Among the researches, she conducted with her team are <a href="https://play.google.com/store/apps/developer?id=MARY+ANN+ELARDE+IGNACO" target="_blank"> Incident Reporting Applications</a>, <a href="http://metalsurvey.cvsuccatre.com/" target="_blank">Metal Working Industry E-Survey</a>, <a href="https://gotrace.cvsuccatre.com/" target="_blank"> GoTrace Contact Tracing</a>, <a href="https://reserviceportal.cvsuccatre.com/" target="_blank">Research and Extension Service Portal </a>,  and <a href="https://onevar.cvsu-techno.com/" target="_blank">One Virtual Accreditation Room</a> with the content management system.</p>
+										<p style="text-align: justify;">Being a graduate of MS Information Technology from Technological University of the Philippines- Manila. 
 									</div>
 								</div>
 							</div>
