--- a/set1/tanega.html
+++ b/set1/tanega.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Michelle's Profile</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
+	<meta name="description" content="xxxx" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 	<meta name="thumbnail" content="images/about.jpg" />
