--- a/set1/tanega.html
+++ b/set1/tanega.html
@@ -200,10 +200,15 @@
 								</span>
 								<div class="desc">
 									<h3>International Conference</h3>
-									Mobile Application for Incident Reporting 
-<a href="http://icicpe.org/" target="_blank">The 4th International conference on Interdisciplinary research on Computer Science, Psychology, and Education (ICICPE 2020)</a>
-Jeju Island Korea <small>Virtual Presentation 
-December 21-23, 2020</small>
+									Development of “MANG KEPWENG’S LAB”: A Mobile Android Informatoon System of Herbal Plants. 
+									<a href="http://icicpe.org/" target="_blank">10th International Conference & Conferment Ceremony/ Royal Institution Singapore</a>
+									<small>April 7-9, 2017</small><Br>
+									Interactive Android Application for Filipino Ethical Values 
+									<a href="http://icicpe.org/" target="_blank">2017 International Conference on Technological Revolution in Education</a>
+									<small>February 24,2017</small><Br>
+									IsdatHalaman, an Android Based Simulation Game for Aquaphonics 
+									<a href="http://icicpe.org/" target="_blank">2016 International Research Conference on Business, Education & Social Sciences (IRCBESS)</a>
+									<small>December 20-21, 2016</small>
 								</div>
 							</div>
 						</div>
@@ -323,7 +328,7 @@ December 21-23, 2020</small>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Working with Hosting (Publishing web site)</h3>
+								<h3>Corel Draw</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="95"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
@@ -382,11 +387,8 @@ December 21-23, 2020</small>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Professional Education (18 units)<br>
-									            	Western Colleges Inc.<br>
-													2014
-													</p>
-											</div>
+									            <p>Professional Education (18 units)<br>Cavite State University Naic<br>2014</p>
+										</div>
 									    </div>
 									</div>
 									<div class="panel panel-default">
@@ -398,9 +400,9 @@ December 21-23, 2020</small>
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									           <p>Bachelor of Science in Information Technology <br>
-									            	<a href="https://www.cvsu-naic.edu.ph/" target="_blank">Cavite State University-Naic</a> <br>
-													June 2006 – April 2010
+									           <p>Bachelor of Science in Information Management <br>
+									            	<a href="https://www.cvsu-naic.edu.ph/" target="_blank">San Sebastian College Recoletos de Cavite</a> <br>
+													June 2000 – April 2004
 													</p>
 									        </div>
 									    </div>
@@ -431,14 +433,11 @@ December 21-23, 2020</small>
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Instructor I</a> <span>June 2015 – Present</span></h2>
-					                  <strong>Cavite State University-CCAT Campus</strong><br>
+					                  <h2><a href="#">Instructor III</a> <span>June 2015 – Present</span></h2>
+					                  <strong>Cavite State University Naic</strong><br>
 					                  <ul>
-					                  	<li>RESEARCH COORDINATOR. Coordinate all research activities, monitor and evaluate the researches, plan and implement activities, and recommend technologies for possible patents application.(Start: January 2020)</li>
+					                  	<li>OSAS Director. Coordinate all research activities, monitor and evaluate the researches, plan and implement activities, and recommend technologies for possible patents application.(Start: January 2020)</li>
 					                  	<li>INSTRUCTOR. Responsible for implementing course content and curriculum. Builds a learning environment that encourages student involvement and participation.</li>
-					                  	<li>UNIT GUIDANCE FACILITATOR. Conduct individual counseling sessions to advise, identify behavioral problems, and act appropriately to solve the situation. (Start: January 2020)</li>
-					                  	<li>THESIS ADVISER. Provide professional and constructive feedback, and deliver concrete guidance for the improvement of the study.</li>
-					                  	<li>TECHNICAL CRITIC. Guide students through the idea-development process.</li>
 					                  </ul>
 					               </div>
 					            </div>
@@ -452,7 +451,7 @@ December 21-23, 2020</small>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2><a href="#">Faculty Researcher</a> <span>2021</span></h2>
-					               	<strong>Cavite State University-CCAT Campus</strong><br>
+					               	<strong>Cavite State University Naic</strong><br>
 					                  <ul>
 					                  	<li>prepare and submit proposals for funding;</li>
 					                  	<li>conduct reseaches within the approved timeline and submit progress reports on time;</li>
@@ -466,19 +465,6 @@ December 21-23, 2020</small>
 					                  	<li>coordinate with the Research and Extension unit and the Extension Services for the dissemination of research results or technologies to the community; and</li>
 					                  	<li>perform other relevant duties that may be assigned from time to time by higher authorities.</li>
 					                  </ul>
-					               </div>
-					            </div>
-					         </article>
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-3">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">Instructor</a> <span>June 2014 – October 2015</span></h2>
-					                  <p><strong>Granby Colleges of Science and Technology</strong><br>
-					                  Instruct and help students learn particularly in providing academic assistance in a variety of learning situations.</p>
 					               </div>
 					            </div>
 					         </article>
