--- a/set1/index.html
+++ b/set1/index.html
@@ -283,9 +283,10 @@
 						<ul class="text-center">
 							<li><a href="javascript:;" data-filter="all" class="active filter">All</a></li>
 							<!-- <li><a href="javascript:;" data-filter=".branding" class="filter">Branding</a></li> -->
-							<li><a href="javascript:;" data-filter=".web" class="filter">web</a></li>
-							<li><a href="javascript:;" data-filter=".logo-design" class="filter">Research</a></li>
+							<li><a href="javascript:;" data-filter=".web" class="filter">Web</a></li>
+							<li><a href="javascript:;" data-filter=".mobile" class="filter">Mobile</a></li><li><a href="javascript:;" data-filter=".logo-design" class="filter">Research</a></li>
 							<li><a href="javascript:;" data-filter=".photography" class="filter">Extension</a></li>
+
 						</ul>
 					</div>
 					
@@ -294,7 +295,7 @@
 			
 			<div class="project-wrapper">
 			
-				<figure class="mix work-item branding">
+				<figure class="mix work-item web">
 					<img src="img/works/osas.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/osas.png"><i class="fa fa-eye fa-lg"></i></a>
@@ -368,6 +369,15 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/ris.png"><i class="fa fa-eye fa-lg"></i></a>
 						<h4>Labore et dolore magnam</h4>
 						<p>Photography</p>
+					</figcaption>
+				</figure>
+
+				<figure class="mix work-item mobile">
+					<img src="img/works/supply.png" alt="">
+					<figcaption class="overlay">
+						<a class="fancybox" rel="works" title="SIMS" href="img/works/supply.png"><i class="fa fa-eye fa-lg"></i></a>
+						<h4>Inventory Management System</h4>
+						<p>Mobile Application</p>
 					</figcaption>
 				</figure>
 				
@@ -660,14 +670,22 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 							<form action="#" id="contact-form">
 								<div class="input-group name-email">
 									<div class="input-field">
-										<input type="text" name="name" id="name" placeholder="Name" class="form-control">
+										<input type="text" name="name" id="name" placeholder="Full Name" class="form-control">
 									</div>
 									<div class="input-field">
-										<input type="email" name="email" id="email" placeholder="Email" class="form-control">
+										<input type="text" name="company" id="company" placeholder="Company" class="form-control">
+									</div>
+								</div>
+								<div class="input-group name-email">
+									<div class="input-field">
+										<input type="email" name="email" id="email" placeholder="Work Email" class="form-control">
+									</div>
+									<div class="input-field">
+										<input type="text" name="number" id="number" placeholder="Work Phone" class="form-control">
 									</div>
 								</div>
 								<div class="input-group">
-									<textarea name="message" id="message" placeholder="Message" class="form-control"></textarea>
+									<textarea name="message" id="message" placeholder="How can we help you?" class="form-control"></textarea>
 								</div>
 								<div class="input-group">
 									<input type="submit" id="form-submit" class="pull-right" value="Send message">
@@ -820,18 +838,26 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 						},
 						message: {
 							required: true
+						},
+						company: {
+							required: true
 						}
 					},
 					messages: {
 						name: {
-							required: "come on, you have a name don't you?",
+							// required: "come on, you have a name don't you?",
+							required: "Please, type your name",
 							minlength: "your name must consist of at least 2 characters"
 						},
 						email: {
-							required: "no email, no message"
+							required: "Please, type your email"
+						},
+						company: {
+							required: "Please, type your company name"
 						},
 						message: {
-							required: "um...yea, you have to write something to send this form.",
+							// required: "um...yea, you have to write something to send this form.",
+							required: "Please, type your message here",
 							minlength: "thats all? really?"
 						}
 					},
