test adjusted logo

--- a/set1/index.html
+++ b/set1/index.html
@@ -65,7 +65,7 @@
 					<!-- logo -->
                     <a class="navbar-brand" href="#body">
 						<h1 id="logo">
-							<img src="img/logo.png" alt="Brandi">
+							<img src="img/logo1.png" alt="Brandi">
 						</h1>
 					</a>
 					<!-- /logo -->
@@ -726,7 +726,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 				
 					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp animated" data-wow-duration="500ms">
 						<div class="footer-single">
-							<img src="img/footer-logo.png" alt="">
+							<img src="img/footer-logo1.png" alt="">
 							<p>Geekhub Consulting is a Business and IT Consultancy company set up in the Philippines to help organizations improve their performance through the introduction of innovative solutions. Geekhub Consulting brings a unique perspective and a wealth of knowledge that can help you transform your organization by developing the appropriate eStrategies for business improvement.</p>
 						</div>
 					</div>
