--- a/set1/index.html
+++ b/set1/index.html
@@ -482,7 +482,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<!-- single member -->
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="900ms">
 						<div class="member-thumb">
-							<img src="img/team/member-1.png" alt="Team Member" class="img-responsive">
+							<img src="img/team/tanega.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
 								<a href="https://tip-markphilipsy.github.io/set1/tanega.html">
 								<h5>Michelle C. Tanega</h5>
