--- a/set1/index.html
+++ b/set1/index.html
@@ -434,7 +434,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms">
 						<div class="member-thumb">
-							<img src="img/team/ignaco.png" alt="Team Member" class="img-responsive">
+							<img src="img/team/ignaco.jpg" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
 								<a href="https://tip-markphilipsy.github.io/set1/ignaco.html">
 								<h5>Mary Ann E. Ignaco</h5>
