--- a/set1/index.html
+++ b/set1/index.html
@@ -284,7 +284,8 @@
 							<li><a href="javascript:;" data-filter="all" class="active filter">All</a></li>
 							<!-- <li><a href="javascript:;" data-filter=".branding" class="filter">Branding</a></li> -->
 							<li><a href="javascript:;" data-filter=".web" class="filter">Web</a></li>
-							<li><a href="javascript:;" data-filter=".mobile" class="filter">Mobile</a></li><li><a href="javascript:;" data-filter=".logo-design" class="filter">Research</a></li>
+							<li><a href="javascript:;" data-filter=".mobile" class="filter">Mobile</a></li>
+							<li><a href="javascript:;" data-filter=".logo-design" class="filter">Research</a></li>
 							<li><a href="javascript:;" data-filter=".photography" class="filter">Extension</a></li>
 
 						</ul>
@@ -315,7 +316,7 @@ services, business enabling environment, and market profile among others." href=
 					</figcaption>
 				</figure>
 				
-				<figure class="mix work-item web">
+				<figure class="mix work-item logo-design">
 					<img src="img/works/reportal.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="It is a web-based application that will offer a research and extension service portal for CCAT employees." href="https://reserviceportal.cvsuccatre.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
@@ -324,7 +325,7 @@ services, business enabling environment, and market profile among others." href=
 					</figcaption>
 				</figure>
 				
-				<figure class="mix work-item web">
+				<figure class="mix work-item photography">
 					<img src="img/works/gotrace.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="GoTrace, a web-based contact tracing application that uses Quick 
