--- a/set1/catajan.html
+++ b/set1/catajan.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>MinleeAngelito's Profile</title>
+	<title>Angelito's Profile</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Min has a lot of natural personal qualities that make her a good worker" />
 	<meta name="keywords" content="Mary Ann E. Ignaco,Mary Ann Ignaco, Ignaco, Jing, Minlee, GoTrace" />
