--- a/set1/catajan.html
+++ b/set1/catajan.html
@@ -59,7 +59,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(img/team/catajan.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Angelito L. Catajan Jr.</a></h1>
-				<span class="position"><a href="#">Web Designer</a> in Philippines</span>
+				<span class="position"><a href="#">Web Designer</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
