--- a/set1/rasdas.html
+++ b/set1/rasdas.html
@@ -59,7 +59,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(img/team/rasdas.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Sherrlyn M. Rasdas</a></h1>
-				<span class="position"><a href="#">Quality Assurance Specialist</a> in Philippines</span>
+				<span class="position"><a href="#">Quality Assurance Specialist</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
