--- a/set1/ignaco.html
+++ b/set1/ignaco.html
@@ -57,7 +57,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about1.jpg);"></div>
+				<div class="author-img" style="background-image: url(img/team/ignaco.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Mary Ann E. Ignaco</a></h1>
 				<span class="position"><a href="#">Software Developer</a> in Philippines</span>
 			</div>
