--- a/set1/ignaco.html
+++ b/set1/ignaco.html
@@ -59,7 +59,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(img/team/ignaco.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Mary Ann E. Ignaco</a></h1>
-				<span class="position"><a href="#">Software Developer</a> in Philippines</span>
+				<span class="position"><a href="#">Software Developer</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
