--- a/set1/francisco.html
+++ b/set1/francisco.html
@@ -58,8 +58,8 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(img/team/francisco.png);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Mary Ann E. Ignaco</a></h1>
-				<span class="position"><a href="#">Software Developer</a> in Philippines</span>
+				<h1 id="colorlib-logo"><a href="index.html">Dan Francisco</a></h1>
+				<span class="position"><a href="#">Project Manager</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
