--- a/set1/index.html
+++ b/set1/index.html
@@ -349,8 +349,8 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<img src="img/works/portal.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/portal.png"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Labore et dolore magnam</h4>
-						<p>Photography</p>
+						<h4>Student Portal</h4>
+						<p>Web Development</p>
 					</figcaption>
 				</figure>
 				
@@ -358,8 +358,8 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<img src="img/works/cvsuvar.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/cvsuvar.png"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Labore et dolore magnam</h4>
-						<p>Photography</p>
+						<h4>Virtual Accreditation Room</h4>
+						<p>Web Development</p>
 					</figcaption>
 				</figure>
 				
@@ -367,8 +367,8 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<img src="img/works/ris.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/ris.png"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Labore et dolore magnam</h4>
-						<p>Photography</p>
+						<h4>Research Information System</h4>
+						<p>Research</p>
 					</figcaption>
 				</figure>
 
