--- a/set1/index.html
+++ b/set1/index.html
@@ -519,7 +519,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<!-- single member -->
 					<figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
 						<div class="member-thumb">
-							<img src="img/team/rasdas.png" alt="Team Member" class="img-responsive">
+							<img src="img/team/rasdasedited.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
 								<a href="https://tip-markphilipsy.github.io/set1/rasdas.html">
 								<h5>Sherrlyn M. Rasda</h5>
