added new works

--- a/set1/index.html
+++ b/set1/index.html
@@ -317,6 +317,15 @@ services, business enabling environment, and market profile among others." href=
 				</figure>
 				
 				<figure class="mix work-item research">
+					<img src="img/works/incident.png" alt="">
+					<figcaption class="overlay">
+						<a class="fancybox" rel="works" title="" href="img/works/incident.png"><i class="fa fa-eye fa-lg"></i></a>
+						<h4>Development of mobile application for Incident Reporting</h4>
+						<p>Research</p>
+					</figcaption>
+				</figure>
+
+				<figure class="mix work-item research">
 					<img src="img/works/reportal.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="It is a web-based application that will offer a research and extension service portal for CCAT employees." href="https://reserviceportal.cvsuccatre.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
@@ -336,6 +345,8 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 						<p>Web Development</p>
 					</figcaption>
 				</figure>
+
+
 			
 				<figure class="mix work-item web">
 					<img src="img/works/onevar.png" alt="">
