update sy profile

--- a/set1/index.html
+++ b/set1/index.html
@@ -461,7 +461,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 						<div class="member-thumb">
 							<img src="img/team/sy.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
-								<a href="https://tip-markphilipsy.github.io/set1/sy.html">
+								<a href="sy.html">
 								<h5>Mark Philip M. Sy</h5>
 								<p>Developer</p>
 								</a>
@@ -472,7 +472,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 								</ul>
 							</figcaption>
 						</div>
-						<a href="https://tip-markphilipsy.github.io/set1/sy.html">
+						<a href="sy.html">
 						<h4>Mark Philip M. Sy</h4>
 						<span>Developer</span>
 						</a>
