--- a/set1/francisco.html
+++ b/set1/francisco.html
@@ -136,8 +136,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p style="text-align: justify;"><strong>Mr. Francisco</strong> is a current Instructor and has been serving the institution for more than six years now. She was initially hired as a part-time faculty member in 2015 to teach computer programming, web development, and programming languages. To secure her tenure in the institution, in 2017, she applied for the plantilla position of Instructor I.  In 2020, she was designated as a <a href="https://reserviceportal.cvsuccatre.com/index.php#about" target="_blank">Coordinator of Research Services</a>, and the year after she applied as a Faculty Researcher. Her interest in software development leads her contributions to the campus in the distribution of extension services in the community amid pandemics. </p>
-										<p style="text-align: justify;">Being a graduate of MS Information Technology from Technological University of the Philippines- Manila, her research interests are focused on software development for the community service project. Among the researches, she conducted with her team are <a href="https://play.google.com/store/apps/developer?id=MARY+ANN+ELARDE+IGNACO" target="_blank"> Incident Reporting Applications</a>, <a href="http://metalsurvey.cvsuccatre.com/" target="_blank">Metal Working Industry E-Survey</a>, <a href="https://gotrace.cvsuccatre.com/" target="_blank"> GoTrace Contact Tracing</a>, <a href="https://reserviceportal.cvsuccatre.com/" target="_blank">Research and Extension Service Portal </a>,  and <a href="https://onevar.cvsu-techno.com/" target="_blank">One Virtual Accreditation Room</a> with the content management system.</p>
+										<p style="text-align: justify;"><strong>Mr. Francisco</strong> is a current freelance IT Consultant for CitiCable, Kabayan Cable, and Flores Supermarket Inc. Also part time Special Lecturer at Arellano University - Legarda Campus </p>
 									</div>
 								</div>
 							</div>
@@ -213,54 +212,13 @@
 									<i class="icon-cog"></i>
 								</span>
 								<div class="desc">
-									<h3>Microsoft Certified Professional</h3>
-									<p>National Certificate II <br><br>Computer 
-Systems Servicing <br>
-June 30, 2018 –<br> June 29, 2023 <br>
-Certificate No. 18042102023238 </p>
+									<h3>Microsoft Certified Professional Developer</h3>
+									<p>MCPD: .NET Framework <br><br> </p>
 								</div>
 							</div>
 						</div>
 				</div>
 				</div>
-				<div class="colorlib-narrow-content">
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-3">
-								<span class="icon">
-									<i class="icon-star"></i>
-								</span>
-								<div class="desc">
-									<h3>Awards</h3>
-									<p><strong>3rd Place in Spoken Poetry </strong>November 25, 2019<br>
-                                    During the Gender and Development Program- VAWC at CvSU-CCAT Campus </p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-1">
-								<span class="icon">
-									<i class="icon-edit"></i>
-								</span>
-								<div class="desc">
-									<strong>Best Research Paper Award </strong>(Development category)
-									 | <small>October 30, 2019 During the 1st Research & Extension Week at CvSU-CCAT Campus for the paper entitled Development of Mobile Application for Incident Reporting</small>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-2">
-								<span class="icon">
-									<i class="icon-star"></i>
-								</span>
-								<div class="desc">
-									<h3>Awards</h3>
-									<p><strong>1st Place in Spoken Poetry </strong><br>2021<br>
-                                    During the Gender and Development Program- VAWC at CvSU-CCAT Campus <br></p>
-								</div>
-							</div>
-						</div>
-				</div>
-				
 			</section>
 			
 			
