--- a/set1/francisco.html
+++ b/set1/francisco.html
@@ -508,11 +508,11 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">IT Staff – MIS Department</a> <span>May 2010 – October 2010</span></h2> <strong>House Research Development (S) Pte. Ltd.</strong><br>	
+					               	<h2><a href="#">Part-Owner</a> <span>June 2006 – August 2008</span></h2> <strong>MOVEFORWARD IT CONSULTING</strong><br>	
 					                   <ul>
-					                   	<li>Conduct software coding, design as well as system testing.</li>
-					                   	<li>Update and expand existing programs.</li>
-										<li>Debug programs by testing for and fixing errors.</li>
+					                   	<li>Responsible in project analysis, business plan, proposals and client negotiation.</li>
+					                   	<li>Create IT plans and implementation guideline to clients.</li>
+										<li>Design and develop business application and local network architecture.</li>
 					                   </ul>
 					               </div>
 					            </div>
@@ -524,15 +524,14 @@
 					               	 <i class="icon-pen2"></i>
 					               </div>
 					                <div class="timeline-label">
-					               	<h2><a href="#">PCOS Technician</a> <span>April 2010 – May 2010</span></h2> <strong>Placewell International Services Corp. </strong><br>	
+					               	<h2><a href="#">System Developer</a> <span>Sept 2004 – May 2006</span></h2> <strong>Philippine and Scandinavian I.T. Services Inc. </strong><br>	
 					                   <ul>
-					                   	<li>Providing technical maintenance to the PCOS machine.</li>
+					                   	<li>Creates Application for external clients like Evoos Inc.(WinFamily), Focus Backup System, Vitus Telemarketing System.</li>
 					                   </ul>
 					               </div>
 					            </div>
 					         </article>
 
-					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
 					               	 <i class="icon-pen2"></i>
