--- a/set1/francisco.html
+++ b/set1/francisco.html
@@ -99,7 +99,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Dan</h1>
-						   					<h2></h2>
+						   					<h2>currently connected with Arellano University as Special Lecturer. Also working as IT Consultant for CitiCable, Kabayan Cable and Flores Supermart</h2>
 												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -114,8 +114,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I am <br>a Project Manager</h1>
-												<h2>that handles different IT solutions project for Financial, Medical, Business Process Outsource, etc.</h2>
+						   					
 												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
