--- a/set1/index.html
+++ b/set1/index.html
@@ -112,7 +112,7 @@
 					<div class="item active" style="background-image: url(img/banner.jpg);">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">We are<span> GeekHub</span>!</h2>
-							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/ICT </span>services provider</h3>
+							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">ICT </span>services provider</h3>
 							<p data-wow-duration="1000ms" class="wow slideInRight animated">A network of IT professionals you can trust.</p>
 							
 							<ul class="social-links text-center">
