--- a/set1/index.html
+++ b/set1/index.html
@@ -316,7 +316,7 @@ services, business enabling environment, and market profile among others." href=
 					</figcaption>
 				</figure>
 				
-				<figure class="mix work-item research">
+				<figure class="mix work-item mobile">
 					<img src="img/works/incident.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="" href="img/works/incident.png"><i class="fa fa-eye fa-lg"></i></a>
@@ -402,7 +402,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					</figcaption>
 				</figure>
 
-				<figure class="mix work-item research">
+				<figure class="mix work-item mobile">
 					<img src="img/works/kepweng1.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="SIMS" href="img/works/kepweng1.png"><i class="fa fa-eye fa-lg"></i></a>
