--- a/set1/index.html
+++ b/set1/index.html
@@ -406,7 +406,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<img src="img/works/kepweng1.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="SIMS" href="img/works/kepweng1.png"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Development of “MANG KEPWENG’S LAB”: A Mobile Android Informatoon System of Herbal Plants.</h4>
+						<h4>Development of “MANG KEPWENG’S LAB”: A Mobile Android Information System of Herbal Plants.</h4>
 						<p>Research</p>
 					</figcaption>
 				</figure>
