--- a/set1/sy.html
+++ b/set1/sy.html
@@ -118,7 +118,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p style="text-align: justify;"><strong>Mr. Sy</strong>  has been serving Cavite State University for more than 11 years now. He started teaching in CvSU in 2010 handling differet ICT-related subjects.  His interests are software development, data analytics, computer network, cyber security and database management. </p>
+										<p style="text-align: justify;"><strong>Mr. Sy</strong>  has been serving Cavite State University for more than 11 years now. He started teaching in CvSU in 2010 handling differet IT-related subjects.  His interests are software development, data analytics, network management, cyber security and database management. </p>
 										<!-- <p style="text-align: justify;">Being a graduate of MS Information Technology from Technological University of the Philippines- Manila, her research interests are focused on software development for the community service project. Among the researches, she conducted with her team are <a href="https://play.google.com/store/apps/developer?id=MARY+ANN+ELARDE+IGNACO" target="_blank"> Incident Reporting Applications</a>, <a href="http://metalsurvey.cvsuccatre.com/" target="_blank">Metal Working Industry E-Survey</a>, <a href="https://gotrace.cvsuccatre.com/" target="_blank"> GoTrace Contact Tracing</a>, <a href="https://reserviceportal.cvsuccatre.com/" target="_blank">Research and Extension Service Portal </a>,  and <a href="https://onevar.cvsu-techno.com/" target="_blank">One Virtual Accreditation Room</a> with the content management system.</p> -->
 									</div>
 								</div>
@@ -191,18 +191,15 @@
 									</div>
 								</div>
 							</div>
-							<!-- <div class="row row-pt-md">
+							<div class="row row-pt-md">
 								<div class="col-md-4 text-center animate-box">
 									<div class="services color-1">
 										<span class="icon">
 											<i class="icon-book"></i>
 										</span>
 										<div class="desc">
-											<h3>Publication - referred</h3>
-											<p>Ignaco, M.A.E.: Development of mobile application for Incident Reporting.<br> In: Proceedings of the 
-		20th Annual SIG Conference on Information Technology Education, SIGITE 2019, September, p. 
-		162 (2019). 	</p>	<a href="https://scholar.google.com/scholar?hl=en&q=Mary+Ann+E+Ignaco.+2019.+Development+of+mobile+application+for+incident+reporting.+In+Proceedings+of+the+20th+Annual+SIG+Conference+on+Information+Technology+Education.+162%2D%2D162.+10.1145%2F3349266.3351382" target="_blank"><img src="images/googleScholar.svg"></a>
-											<a href="https://dl.acm.org/doi/10.1145/3349266.3351382" target="_blank"><img src="images/DL_icon.svg"></a>	
+											<h3>Publication</h3>
+											<p>SY, Mark Philip M. et al. Query Game 2.0: Improvement of a Web-Based Query Game for Cavite State University – Main Campus. International Journal of Computing Sciences Research, [S.l.], v. 4, n. 2, p. 304-318, may 2020. ISSN 2546-115X. Available <a href = "www.stepacademic.net/ijcsr/article/view/125">here</a></p>
 											
 
 										</div>
@@ -215,10 +212,8 @@
 										</span>
 										<div class="desc">
 											<h3>International Conference</h3>
-											Mobile Application for Incident Reporting 
-		<a href="http://icicpe.org/" target="_blank">The 4th International conference on Interdisciplinary research on Computer Science, Psychology, and Education (ICICPE 2020)</a>
-		Jeju Island Korea <small>Virtual Presentation 
-		December 21-23, 2020</small>
+											Good Programming Foundation, Modern Learner's Lifestyle and Engagement, and Practical Application: Basis for the Development of a Web-Based Educational Environment System <br>
+											<p>2019 APCoRE Convention & International Conference</p>
 										</div>
 									</div>
 								</div>
@@ -228,26 +223,30 @@
 											<i class="icon-cog"></i>
 										</span>
 										<div class="desc">
-											<h3>TECHNICAL EDUCATION AND SKILLS DEVELOPMENT ATTAINMENT</h3>
-											<p>National Certificate II <br><br>Computer 
-		Systems Servicing <br>
-		June 30, 2018 –<br> June 29, 2023 <br>
-		Certificate No. 18042102023238 </p>
+											<h3>CERTIFICATES</h3>
+											<p>TESDA
+											<br>National Certificate II <br>
+											Computer Systems Servicing <br>
+											August 20, 2017 <br> August 19, 2022<br><br>
+											Scrum Foundation Professional Certificate<br>
+											June 2020<br><br>
+											Civil Service EDP Special Eligibility – Java Programming
+											</p>
 										</div>
 									</div>
 								</div>
-						</div> -->
+						</div>
 				</div>
-				<!-- <div class="colorlib-narrow-content">
+				<div class="colorlib-narrow-content">
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-3">
 								<span class="icon">
 									<i class="icon-star"></i>
 								</span>
 								<div class="desc">
-									<h3>Awards</h3>
-									<p><strong>3rd Place in Spoken Poetry </strong>November 25, 2019<br>
-                                    During the Gender and Development Program- VAWC at CvSU-CCAT Campus </p>
+									<h3>INTERNATIONAL CONFERENCE</h3>
+									<p>QUERY GAME 2.0: Improvement of the Web-Based Query Game for Cavite State University – Main Campus </p>
+									<p>7th International Higher Education Research Forum</p>
 								</div>
 							</div>
 						</div>
@@ -257,8 +256,9 @@
 									<i class="icon-edit"></i>
 								</span>
 								<div class="desc">
-									<strong>Best Research Paper Award </strong>(Development category)
-									 | <small>October 30, 2019 During the 1st Research & Extension Week at CvSU-CCAT Campus for the paper entitled Development of Mobile Application for Incident Reporting</small>
+									<h3>INTERNATIONAL CONFERENCE</h3>
+									<p>Design and Development of an E-Learning System for Electrical Technology IV in Cavite State University Implementing Interactive Laboratory Activities </p>
+									<p>4th International Research Conference on Emerging Information Technology Trends in Asia and the Pacific</p>
 								</div>
 							</div>
 						</div>
@@ -268,13 +268,13 @@
 									<i class="icon-star"></i>
 								</span>
 								<div class="desc">
-									<h3>Awards</h3>
-									<p><strong>1st Place in Spoken Poetry </strong><br>2021<br>
-                                    During the Gender and Development Program- VAWC at CvSU-CCAT Campus <br></p>
+									<h3>INTERNATIONAL CONFERENCE</h3>
+									<p>Development of Faculty Research Information System Implementing a Map as Visualization Tool for Cavite State University – Main Campus</p>
+									<p>4th International Research Conference on Emerging Information Technology Trends in Asia and the Pacific</p>
 								</div>
 							</div>
 						</div>
-				</div> -->
+				</div>
 				
 			</section>
 			
