--- a/set1/index.html
+++ b/set1/index.html
@@ -341,7 +341,7 @@ services, business enabling environment, and market profile among others." href=
 Response (QR) codes. GoTrace integrates the collection of daily health survey 
 and location tracking data of the end-users on a digital and web platform to 
 generate real-time, accurate, and reliable contact tracing reports." href="https://gotrace.cvsuccatre.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Sustainable Products Innovation and Research Hub</h4>
+						<h4>GoTrace</h4>
 						<p>Web Development</p>
 					</figcaption>
 				</figure>
@@ -352,7 +352,7 @@ generate real-time, accurate, and reliable contact tracing reports." href="https
 					<img src="img/works/onevar.png" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="OneVAR is designed as the perfect avenue for the conduct of virtual accreditation. It will also serve as an excellent platform for data repository." href="https://onevar.cvsu-techno.com/" target="_blank"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Sustainable Products Innovation and Research Hub</h4>
+						<h4>OneVAR</h4>
 						<p>Web Development</p>
 					</figcaption>
 				</figure>
