--- a/set1/sy.html
+++ b/set1/sy.html
@@ -212,7 +212,7 @@
 										</span>
 										<div class="desc">
 											<h3>International Conference</h3>
-											Good Programming Foundation, Modern Learner's Lifestyle and Engagement, and Practical Application: Basis for the Development of a Web-Based Educational Environment System <br>
+											<p>Good Programming Foundation, Modern Learner's Lifestyle and Engagement, and Practical Application: Basis for the Development of a Web-Based Educational Environment System</p>
 											<p>2019 APCoRE Convention & International Conference</p>
 										</div>
 									</div>
