--- a/set1/sy.html
+++ b/set1/sy.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(img/team/sy.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Mark Philip M. Sy</a></h1>
-				<span class="position"><a href="#">GeekHub</a>.Philip</span>
+				<span class="position"><a href="../index.html">GeekHub</a>.Philip</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
