--- a/set1/sy.html
+++ b/set1/sy.html
@@ -56,9 +56,10 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
+				<span class="position"><a href="index.html">GeekHub Homepage</a></span>
 				<div class="author-img" style="background-image: url(img/team/sy.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Mark Philip M. Sy</a></h1>
-				<span class="position"><a href="../index.html">GeekHub</a>.Philip</span>
+				<span class="position"><a href="index.html">GeekHub</a>.Philip</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
